<resources>
    <string name="app_name">TimeBased OTP</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">User</string>
    <string name="title_dashboard">Jadwal</string>
    <string name="title_notifications">Nilai</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="nip">NIP</string>
    <string name="header_title">Time-Based</string>
    <string name="sub_title">O T P</string>
    <string name="app_head_title">Time-Based OTP</string>
    <string name="app_title_desc">Your application description here</string>
    <string name="user_text_label">Nama Dosen</string>
    <string name="lbl_ruangan">Ruangan</string>
    <string name="lbl_separator">:</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_force_logout">Force Logout</string>
    <string name="lbl_status_token">Status Token</string>
    <string name="lbl_otp_key">TOTP Key</string>
    <string name="status_token_valid">Token Valid</string>
    <string name="status_token_invalid">Token Expired or Broken</string>
    <string name="lbl_nim">NIM</string>
    <string name="lbl_tugas_1">Tugas 1</string>
    <string name="lbl_uts">UTS</string>
    <string name="lbl_tugas_2">Tugas 2</string>
    <string name="lbl_uas">UAS</string>
    <string name="lbl_praktikum">Praktikum</string>
    <string name="lbl_nilai_total">Nilai Total</string>
    <string name="lbl_kode_kelas">Kode Kelas</string>
    <string name="lbl_id_nilai">ID Nilai</string>
    <string name="lbl_form_tambah_nilai">Form Tambah Nilai</string>
    <string name="lbl_form_edit_nilai">Form Edit Nilai</string>
    <string name="title_activity_nilai">Daftar Nilai</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_nama_matkul">Nama Matkul</string>
    <string name="lbl_kode_matkul">Kode Matkul</string>
</resources>
