<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dialog_tittle"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icn_dialog"
            android:layout_marginEnd="10dp"
            android:tint="@color/colorForeground"
            app:srcCompat="@drawable/ic_add_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/title_dialog"
            android:textColor="@color/colorForeground"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/lbl_form_tambah_nilai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ProgressBar
        android:layout_below="@id/dialog_tittle"
        android:indeterminate="true"
        android:id="@+id/progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_below="@id/dialog_tittle"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_id_nilai"
                android:hint="@string/lbl_id_nilai"
                android:inputType="textCapCharacters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_nim"
                    android:inputType="textCapCharacters"
                    android:hint="@string/lbl_nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:enabled="false"
                    android:id="@+id/ed_kd_kelas"
                    android:inputType="textCapCharacters"
                    android:hint="@string/lbl_kode_kelas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_tugas_1"
                    android:hint="@string/lbl_tugas_1"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_tugas_2"
                    android:hint="@string/lbl_tugas_2"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_praktikum"
                    android:hint="@string/lbl_praktikum"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_uts"
                    android:inputType="numberDecimal"
                    android:hint="@string/lbl_uts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_uas"
                    android:inputType="numberDecimal"
                    android:hint="@string/lbl_uas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>