<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <LinearLayout
            android:id="@+id/user_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingEnd="8dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:background="@color/colorForeground"
                android:layout_width="4dp"
                android:layout_height="30dp" />

            <View
                android:layout_marginStart="5dp"
                android:background="@color/colorForeground"
                android:layout_width="2dp"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/app_head_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:text="@string/app_title_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/m_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_header">

            <TextView
                android:text="@string/user_text_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/nip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_nip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_logout"
            android:text="@string/lbl_logout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_f_logout"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorForeground"
            android:text="@string/lbl_force_logout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>