<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="6dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="3dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="5dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorForeground"
                    android:id="@+id/tv_id_nilai"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/colorForeground"
                    android:id="@+id/tv_th_akademik"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lbl_nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_separator"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_kode_kelas"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_separator"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_kode_kelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>

        <View
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorForegroundA"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lbl_tugas_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_separator"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_tugas_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_uts"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_separator"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_uts"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lbl_tugas_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_separator"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_tugas_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_uas"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_separator"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_uas"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lbl_praktikum"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_separator"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_praktikum"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_nilai_total"
                android:textColor="@color/colorAccent"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/lbl_separator"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_nilai_total"
                android:textColor="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

        <TextView
            android:id="@+id/tv_nilai_huruf"
            android:padding="5dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:background="@color/colorForegroundA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>